# meshrepeat

./: .editorconfig  .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
docs/: api.md  auth.md
firmware/: README.md  SETUP_TBEAM.md  meshcore-pin.txt  platformio.ini
ops/: Dockerfile  README.md  docker-compose.example.yaml  docker-compose.yml
protocol/: WIRE.md
server/bridge/: alembic.ini  pyproject.toml
server/bridge/alembic/: env.py
server/bridge/alembic/versions/: 21ecfd228766_companion_messages_and_contacts.py  4a3d9b1f7e02_companion_channels.py  7a4e9b2c8d10_companion_identity_is_echo.py  8c1a4e2d9f3b_contact_favorite.py  91d1ec6c049a_initial_schema.py  9b2f8e1c4a7d_contact_out_path.py  a1f3e7b9c2d4_companion_api_tokens.py  a7b2e9f4c1d3_companion_message_translation.py  a8d3e1c5b9f4_companion_weather_posts.py  b3c7e9d2f5a1_companion_ha_bridge.py  b4e7d2c9f1a3_companion_link_probes.py  b6e3d4f8a2c1_contact_archived_at.py  c5a1ee9d7720_contact_lat_lon.py  c7f4a9e3b6d2_channel_archived_at.py  c8f3a1d6b2e4_link_probe_ack_hash.py  c9a1f4e3d7b2_companion_ai_agent.py  d3a8c4b1e9f5_channel_favorite.py  d7e2a9c1f4b8_messages_fts5.py  e4b8d5c2f1a9_strip_channel_sigil.py  e9f08c1ab3d2_companion_room_support.py  f1a2b3c4d5e6_raw_packets.py  f5c1d8a3b2e7_companion_identity_path_hash_mode.py
server/bridge/src/meshcore_bridge/: __init__.py  __main__.py  companion_events.py  config.py  log.py
server/bridge/src/meshcore_bridge/auth/: __init__.py  email.py  passwords.py  sessions.py  tokens.py
server/bridge/src/meshcore_bridge/bridge/: __init__.py  dedup.py  packet_spool.py  policy.py  registry.py  repeater_metrics.py  router.py  traffic.py
server/bridge/src/meshcore_bridge/db/: __init__.py  models.py  session.py
server/bridge/src/meshcore_bridge/web/: __init__.py  admin_routes.py  app.py  auth_routes.py  bridge_ws.py  companion_routes.py  deps.py  health_routes.py  repeater_routes.py
server/bridge/src/meshcore_bridge/web/static/: app.css  companion.js  theme.js
server/bridge/src/meshcore_bridge/web/templates/: _macros.html.j2  admin_index.html.j2  admin_inspector.html.j2  admin_repeaters.html.j2  admin_stats.html.j2  admin_traffic.html.j2  base.html.j2  companion_detail.html.j2  companion_index.html.j2  dashboard.html.j2  index.html.j2  login.html.j2  repeater_new.html.j2  repeater_show.html.j2  signup.html.j2  verify_email.html.j2
server/bridge/src/meshcore_bridge/wire/: __init__.py  codec.py  frames.py
server/bridge/tests/: conftest.py  test_admin_stats.py  test_codec.py  test_companion_api_tokens.py  test_companion_default_channels.py  test_companion_echo_bot.py  test_companion_endpoints.py  test_companion_events.py  test_companion_grp_txt_rx.py  test_companion_ha_bridge.py  test_companion_out_path.py  test_companion_routes_ai_agent.py  test_companion_thread_sort.py  test_companion_translation.py  test_db_auto_migration.py  test_dedup.py  test_passwords.py  test_policy.py  test_repeater_metrics.py  test_router.py  test_sessions.py  test_smoke.py  test_tokens.py  test_traffic.py
server/bridge/tests/ui/: conftest.py  test_basic_ui.py
server/companion/: pyproject.toml
server/companion/src/meshcore_companion/: __init__.py  ai_agent.py  coords.py  crypto.py  ha_bridge.py  homeassistant.py  node.py  packet.py  service.py  storage.py  translator.py  weather.py
server/companion/tests/: test_advert_app_data.py  test_ai_agent.py  test_coords.py  test_crypto.py  test_ha_bridge.py  test_homeassistant.py  test_node.py  test_node_channel.py  test_packet.py  test_repeater_stats.py  test_storage.py  test_translator.py  test_weather_format.py
tools/: spiegel-companion  spiegel-ctl  spiegel-link-probe  spiegel-tbeam-setup.py  (+1 more)
(+20 files in other folders)
