[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meshcore-bridge"
version = "0.9.4"
description = "MeshCore Internet-Spiegel Bridge-Daemon (asyncio + WebSocket)"
requires-python = ">=3.12"
authors = [{ name = "Daniel Dumke", email = "claude.ai.daniel@dumke.me" }]
dependencies = [
    "fastapi>=0.115",
    # Starlette 1.x deprecated den httpx-TestClient-Backend (-> httpx2) und
    # wirft StarletteDeprecationWarning, was bei filterwarnings=error die
    # Test-Collection killt. fastapi>=0.115 lässt starlette ungebremst auf
    # 1.x springen; bis httpx2-Migration geklärt ist, auf der 0.x-Linie
    # halten (0.52.1 = letztes 0.x, mit fastapi 0.136 kompatibel).
    "starlette>=0.46,<1.0",
    "uvicorn[standard]>=0.30",
    "websockets>=13",
    "cbor2>=5.6",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "argon2-cffi>=23",
    "cryptography>=43",
    "aiosqlite>=0.20",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "structlog>=24",
    "prometheus-client>=0.21",
    "PyYAML>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML",
]
# Playwright-basierte UI-Tests. Lokal nach `pip install -e ".[ui-test]"`
# noch `playwright install --with-deps chromium` ausführen.
ui-test = [
    "playwright>=1.50",
    "pytest-playwright>=0.5",
]

[project.scripts]
meshcore-bridge = "meshcore_bridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/meshcore_bridge"]
